font shorthand with inherit keyword incorrectly parsed and rendered https://bugs.webkit.org/show_bug.cgi?id=20181

Reviewed by Tony Chang.

Source/WebCore:

As stated in http://www.w3.org/TR/CSS21/changes.html#q142
if the inherit (and also by extension initial) is encountered in the
middle of the shorthand then the property becomes invalid.

Test: fast/css/font-shorthand-mix-inherit.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFont):
(WebCore::CSSParser::parseFontFamily):

LayoutTests:

* fast/css/font-shorthand-mix-inherit-expected.txt: Added.
* fast/css/font-shorthand-mix-inherit.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@107728 bbb929c8-8fbe-4397-9dbb-9b2b20218538