third_party/WebKit/Source/WebCore/css/CSSParser.cpp
@@ -4148,6 +4148,8 @@ bool CSSParser::parseFont(bool important)
     // Optional font-style, font-variant and font-weight.
     while (value) {
         int id = value->id;
+        if (id == CSSValueInitial || id == CSSValueInherit)
+            return false;
         if (id) {
             if (id == CSSValueNormal) {
                 // It's the initial value for all three, so mark the corresponding longhand as explicit.
@@ -4217,6 +4219,9 @@ bool CSSParser::parseFont(bool important)
     if (!value)
         return false;
 
+    if (value->id == CSSValueInitial || value->id == CSSValueInherit)
+        return false;
+
     // Set undefined values to default.
     if (!font->style)
         font->style = cssValuePool()->createIdentifierValue(CSSValueNormal);
@@ -4233,6 +4238,9 @@ bool CSSParser::parseFont(bool important)
         font->size = createPrimitiveNumericValue(value);
     value = m_valueList->next();
     if (!font->size || !value)
+        return false;
+
+    if (value->id == CSSValueInitial || value->id == CSSValueInherit)
         return false;
 
     if (value->unit == CSSParserValue::Operator && value->iValue == '/') {
@@ -4252,6 +4260,9 @@ bool CSSParser::parseFont(bool important)
         if (!value)
             return false;
     }
+
+    if (value->id == CSSValueInitial || value->id == CSSValueInherit)
+        return false;
 
     if (!font->lineHeight)
         font->lineHeight = cssValuePool()->createIdentifierValue(CSSValueNormal);
@@ -4284,6 +4295,8 @@ PassRefPtr<CSSValueList> CSSParser::parseFontFamily()
 
     FontFamilyValue* currFamily = 0;
     while (value) {
+        if (value->id == CSSValueInitial || value->id == CSSValueInherit)
+            return 0;
         CSSParserValue* nextValue = m_valueList->next();
         bool nextValBreaksFont = !nextValue ||
                                  (nextValue->unit == CSSParserValue::Operator && nextValue->iValue == ',');
